--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 <style>
 :root {
   --card-bg: rgba(255,255,255,0.18);
-  --text: #fff;
+  --text: #ffffff;
+  --top-btn-bg: rgba(255,255,255,0.4);
+  --top-btn-border: rgba(255,255,255,0.5);
 }
 
-/* ===== THEME ===== */
+/* ===== DARK THEME ===== */
 body.dark {
-  --card-bg: rgba(0,0,0,0.6);
+  --card-bg: rgba(0,0,0,0.65);
   --text: #f1f1f1;
+  --top-btn-bg: rgba(0,0,0,0.55);
+  --top-btn-border: rgba(255,255,255,0.25);
 }
 
 /* ===== BASE ===== */
 body {
   margin: 0;
   font-family: "Segoe UI", Arial, sans-serif;
-  background: url("car.jpg") center/cover no-repeat;
+  background: url("car.jpg") center / cover no-repeat;
   min-height: 100vh;
   color: var(--text);
-
-  /* КЛЮЧЕВОЕ ИСПРАВЛЕНИЕ */
-  padding-top: 90px; /* место под top-bar */
+  padding-top: 90px;
 }
 
 .hidden { display: none; }
@@ -49,18 +51,28 @@ body {
   z-index: 100;
 }
 
+body.dark .top-bar {
+  background: rgba(0,0,0,0.35);
+}
+
+/* ===== TOP BUTTONS ===== */
 .top-btn {
   padding: 8px 14px;
   border-radius: 10px;
-  background: rgba(255,255,255,0.4);
-  border: 1px solid rgba(255,255,255,0.5);
-  color: #fff;
+  background: var(--top-btn-bg);
+  border: 1px solid var(--top-btn-border);
+  color: var(--text);
   cursor: pointer;
   font-size: 14px;
+  transition: background 0.25s, color 0.25s, border 0.25s;
 }
 
 .top-btn:hover {
-  background: rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.65);
+}
+
+body.dark .top-btn:hover {
+  background: rgba(0,0,0,0.75);
 }
 
 /* ===== USER INFO ===== */
@@ -92,7 +104,7 @@ input {
   font-size: 15px;
 }
 
-/* ===== BUTTONS ===== */
+/* ===== MAIN BUTTON ===== */
 button.main {
   width: 100%;
   padding: 12px;
@@ -104,6 +116,7 @@ button.main {
   font-size: 16px;
 }
 
+/* ===== DANGER BUTTON ===== */
 button.danger {
   width: 100%;
   margin-top: 10px;
@@ -257,16 +270,22 @@ const authContent = document.getElementById("authContent");
 const loginInfo = document.getElementById("loginInfo");
 const history = document.getElementById("history");
 const historyList = document.getElementById("historyList");
+const themeBtn = document.getElementById("themeBtn");
 
-/* THEME */
-if (localStorage.theme === "dark") document.body.classList.add("dark");
+/* ===== THEME LOGIC ===== */
+function applyTheme(isDark) {
+  document.body.classList.toggle("dark", isDark);
+  themeBtn.textContent = isDark ? "☀️" : "🌙";
+  localStorage.theme = isDark ? "dark" : "light";
+}
+
+applyTheme(localStorage.theme === "dark");
+
 themeBtn.onclick = () => {
-  document.body.classList.toggle("dark");
-  localStorage.theme =
-    document.body.classList.contains("dark") ? "dark" : "light";
+  applyTheme(!document.body.classList.contains("dark"));
 };
 
-/* AUTH STATE */
+/* ===== AUTH STATE ===== */
 onAuthStateChanged(auth, async user => {
   if (user) {
     userEmail.textContent = user.email;
@@ -291,7 +310,7 @@ onAuthStateChanged(auth, async user => {
   }
 });
 
-/* LOAD HISTORY */
+/* ===== LOAD HISTORY ===== */
 async function loadHistory(uid) {
   historyList.innerHTML = "";
 
@@ -318,7 +337,7 @@ async function loadHistory(uid) {
   history.classList.toggle("hidden", records.length === 0);
 }
 
-/* CLEAR DATA */
+/* ===== CLEAR DATA ===== */
 clearBtn.onclick = async () => {
   if (!confirm("Удалить ВСЕ записи пробега?")) return;
 
@@ -334,7 +353,7 @@ clearBtn.onclick = async () => {
   history.classList.add("hidden");
 };
 
-/* EVENTS */
+/* ===== EVENTS ===== */
 loginBtn.onclick = () => loginModal.classList.add("show");
 registerBtn.onclick = () => registerModal.classList.add("show");
 closeLogin.onclick = () => loginModal.classList.remove("show");
