--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   --input-bg: #f2f2f2;
 }
 
-/* ===== DARK THEME ===== */
 body.dark {
   --card-bg: rgba(0,0,0,0.65);
   --text: #f1f1f1;
@@ -27,7 +26,6 @@ body.dark {
   --input-bg: #1e1e1e;
 }
 
-/* ===== BASE ===== */
 body {
   margin: 0;
   font-family: "Segoe UI", Arial, sans-serif;
@@ -39,29 +37,22 @@ body {
 
 .hidden { display: none; }
 
-/* ===== TOP BAR ===== */
+/* TOP BAR */
 .top-bar {
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   height: 64px;
-
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-
   background: rgba(255,255,255,0.25);
   backdrop-filter: blur(10px);
   z-index: 100;
 }
+body.dark .top-bar { background: rgba(0,0,0,0.35); }
 
-body.dark .top-bar {
-  background: rgba(0,0,0,0.35);
-}
-
-/* ===== TOP BUTTONS ===== */
 .top-btn {
   padding: 8px 14px;
   border-radius: 10px;
@@ -69,18 +60,9 @@ body.dark .top-bar {
   border: 1px solid var(--top-btn-border);
   color: var(--text);
   cursor: pointer;
-  font-size: 14px;
-  transition: background 0.25s, color 0.25s, border 0.25s;
 }
 
-/* ===== USER INFO ===== */
-.user-info {
-  text-align: center;
-  margin-bottom: 10px;
-  font-size: 15px;
-}
-
-/* ===== CARD ===== */
+/* CARD */
 .card {
   margin: 0 auto;
   max-width: 420px;
@@ -89,22 +71,20 @@ body.dark .top-bar {
   border-radius: 18px;
   backdrop-filter: blur(14px);
   text-align: center;
-  box-shadow: 0 8px 32px rgba(0,0,0,0.25);
 }
 
-/* ===== INPUT ===== */
+/* INPUTS */
 input {
   width: 100%;
   padding: 12px;
   margin-bottom: 12px;
   border-radius: 10px;
   border: none;
-  font-size: 15px;
   background: var(--input-bg);
   color: var(--modal-text);
 }
 
-/* ===== BUTTONS ===== */
+/* BUTTONS */
 button.main {
   width: 100%;
   padding: 12px;
@@ -113,9 +93,7 @@ button.main {
   background: linear-gradient(135deg,#6ba8ff,#005fcc);
   color: white;
   cursor: pointer;
-  font-size: 16px;
 }
-
 button.danger {
   width: 100%;
   margin-top: 10px;
@@ -127,20 +105,7 @@ button.danger {
   cursor: pointer;
 }
 
-/* ===== INFO TEXT ===== */
-.info-text {
-  opacity: 0.9;
-  font-size: 15px;
-}
-
-/* ===== HISTORY ===== */
-.history {
-  margin-top: 18px;
-  text-align: left;
-  font-size: 14px;
-}
-
-/* ===== MODAL ===== */
+/* MODAL */
 .overlay {
   position: fixed;
   inset: 0;
@@ -150,7 +115,6 @@ button.danger {
   align-items: center;
   z-index: 200;
 }
-
 .overlay.show { display: flex; }
 
 .modal {
@@ -160,9 +124,7 @@ button.danger {
   width: 300px;
   border-radius: 14px;
   position: relative;
-  text-align: center;
 }
-
 .close {
   position: absolute;
   top: 8px;
@@ -183,25 +145,16 @@ button.danger {
   <button class="top-btn" id="themeBtn">🌙</button>
 </div>
 
-<div class="user-info hidden" id="userInfo">
-  Вы вошли: <b id="userEmail"></b>
-</div>
-
 <div class="card">
-  <p class="info-text" id="loginInfo">
-    Войдите, чтобы сохранять и просматривать пробег автомобиля
-  </p>
+  <p id="loginInfo">Войдите, чтобы сохранять и просматривать пробег автомобиля</p>
 
   <div id="authContent" class="hidden">
     <h2>Введите пробег</h2>
-
     <form id="mileageForm">
-      <input type="number" id="mileage" placeholder="Пробег в км" required>
+      <input type="number" id="mileage" required>
       <button class="main">Сохранить</button>
     </form>
-
-    <div class="history hidden" id="history">
-      <h3>Последние 5 записей</h3>
+    <div id="history" class="hidden">
       <ul id="historyList"></ul>
       <button class="danger" id="clearBtn">Очистить данные</button>
     </div>
@@ -235,25 +188,49 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebas
 import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 import { getFirestore, collection, addDoc, query, where, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-const firebaseConfig = {
+const app = initializeApp({
   apiKey: "AIzaSyCuTQ4a2znu4NezpilyL2QAyMQHt5SAozE",
   authDomain: "focus3-df69e.firebaseapp.com",
   projectId: "focus3-df69e"
-};
-
-const app = initializeApp(firebaseConfig);
+});
 const auth = getAuth(app);
 const db = getFirestore(app);
 
 /* THEME */
 const themeBtn = document.getElementById("themeBtn");
-function applyTheme(isDark) {
-  document.body.classList.toggle("dark", isDark);
-  themeBtn.textContent = isDark ? "☀️" : "🌙";
-  localStorage.theme = isDark ? "dark" : "light";
-}
+const applyTheme = d => {
+  document.body.classList.toggle("dark", d);
+  themeBtn.textContent = d ? "☀️" : "🌙";
+  localStorage.theme = d ? "dark" : "light";
+};
 applyTheme(localStorage.theme === "dark");
 themeBtn.onclick = () => applyTheme(!document.body.classList.contains("dark"));
+
+/* MODALS */
+loginBtn.onclick = () => loginModal.classList.add("show");
+registerBtn.onclick = () => registerModal.classList.add("show");
+closeLogin.onclick = () => loginModal.classList.remove("show");
+closeRegister.onclick = () => registerModal.classList.remove("show");
+
+/* AUTH */
+loginSubmit.onclick = async () => {
+  await signInWithEmailAndPassword(auth, loginEmail.value, loginPass.value);
+  loginModal.classList.remove("show");
+};
+regSubmit.onclick = async () => {
+  await createUserWithEmailAndPassword(auth, regEmail.value, regPass.value);
+  registerModal.classList.remove("show");
+};
+logoutBtn.onclick = () => signOut(auth);
+
+/* AUTH STATE */
+onAuthStateChanged(auth, user => {
+  authContent.classList.toggle("hidden", !user);
+  loginInfo.classList.toggle("hidden", !!user);
+  logoutBtn.classList.toggle("hidden", !user);
+  loginBtn.classList.toggle("hidden", !!user);
+  registerBtn.classList.toggle("hidden", !!user);
+});
 </script>
 
 </body>
